force-app/main/default/objects/BT_Class__c/BT_Class__c.object-meta.xml
<CustomObject>
    <label>BT Class</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>