force-app/main/default/objects/BT_Class__c/fields/AdditionalDescription__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDescription__c</fullName>
    <label>Additional Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>