force-app/main/default/objects/BT_Class__c/fields/AreWalkInsWelcome__c.field-meta.xml
<CustomField>
    <fullName>AreWalkInsWelcome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if walk-ins will be accepted</description>
    <label>Are Walk-ins Welcome</label>
    <type>Checkbox</type>
</CustomField>