force-app/main/default/objects/BT_Class__c/fields/Class_URL__c.field-meta.xml
<CustomField>
    <fullName>Class_URL__c</fullName>
    <formula>$Label.LearnBrightMlsCommURL + &apos;/classdetail?classId=&apos;+Id</formula>
    <label>Class URL</label>
    <type>Text</type>
</CustomField>