force-app/main/default/objects/BT_Class__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>BT_Course__c</referenceTo>
    <relationshipName>Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>