force-app/main/default/objects/BT_Class__c/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Simulcast</fullName>
            </value>
            <value>
                <fullName>Streaming</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>