force-app/main/default/objects/BT_Class__c/fields/ExternalRegistationSite__c.field-meta.xml
<CustomField>
    <fullName>ExternalRegistationSite__c</fullName>
    <label>External Registation Site</label>
    <type>Url</type>
</CustomField>