force-app/main/default/objects/BT_Class__c/fields/HasNoShowFee__c.field-meta.xml
<CustomField>
    <fullName>HasNoShowFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has No Show Fee</label>
    <type>Checkbox</type>
</CustomField>