force-app/main/default/objects/BT_Class__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>BT_Instructor__c</referenceTo>
    <relationshipLabel>BT Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>