force-app/main/default/objects/BT_Class__c/fields/Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name__c</fullName>
    <formula>Instructor__r.Contact__r.FirstName +&apos; &apos;+ Instructor__r.Contact__r.LastName</formula>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>