force-app/main/default/objects/BT_Class__c/fields/IsRecorded__c.field-meta.xml
<CustomField>
    <fullName>IsRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the class will be recorded or not</description>
    <label>Is Recorded</label>
    <type>Checkbox</type>
</CustomField>