force-app/main/default/objects/BT_Class__c/fields/IsRegistrationRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRegistrationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Registration Required</label>
    <type>Checkbox</type>
</CustomField>