force-app/main/default/objects/BT_Class__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>a Private field of free text for staff to use (Wifi Codes, etc...)</description>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>