force-app/main/default/objects/BT_Class__c/fields/NumberOfRegistrations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRegistrations__c</fullName>
    <label>Number Of Registrations</label>
    <summaryFilterItems>
        <field>BT_Registration__c.Status__c</field>
        <operation>contains</operation>
        <value>Registered, Attended, No Show</value>
    </summaryFilterItems>
    <summaryForeignKey>BT_Registration__c.Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>