force-app/main/default/objects/BT_Class__c/fields/PostDeliveryRecording__c.field-meta.xml
<CustomField>
    <fullName>PostDeliveryRecording__c</fullName>
    <description>a way to link to the course after it was delivered</description>
    <label>Post Delivery Recording</label>
    <type>Url</type>
</CustomField>