force-app/main/default/objects/BT_Class__c/fields/RegistrationDeadline__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDeadline__c</fullName>
    <label>Registration Deadline</label>
    <type>DateTime</type>
</CustomField>