force-app/main/default/objects/BT_Class__c/fields/SeatsRemaining__c.field-meta.xml
<CustomField>
    <fullName>SeatsRemaining__c</fullName>
    <formula>Capacity__c - NumberOfRegistrations__c</formula>
    <label>Seats Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>