force-app/main/default/objects/BT_Class__c/fields/test_Auto_number2__c.field-meta.xml
<CustomField>
    <fullName>test_Auto_number2__c</fullName>
    <label>test Auto number2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>