force-app/main/default/objects/BT_Class__c/fields/test_Auto_number__c.field-meta.xml
<CustomField>
    <fullName>test_Auto_number__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>test Auto number</label>
    <type>AutoNumber</type>
</CustomField>