force-app/main/default/objects/BT_Class__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Venue</label>
    <referenceTo>BT_Venue__c</referenceTo>
    <relationshipLabel>BT Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>